--- a/_includes/layout/header.html
+++ b/_includes/layout/header.html
@@ -2,7 +2,7 @@
 <header class="header">
   <div class="header__section">
     <a href="/" class="header__logo-link">
-      Jekyll Example
+      <img class="header__logo" src="/assets/images/logo.png" alt=""/>
     </a>
   </div>
   <div class="header__section">
