fix/puntos-de-venta

--- a/assets/scss/variables/_colors.scss
+++ b/assets/scss/variables/_colors.scss
@@ -16,5 +16,6 @@ $color-gray: rgba(0,0,0,.4);
 
 // corporative
 
-$color-corporative: #0099e5;
+$color-corporative: #ff8000;
+$color-orange: #ff8000;
 $color-gray-content: #444;
