--- a/_includes/components/puntos-de-venta.html
+++ b/_includes/components/puntos-de-venta.html
@@ -1,6 +1,60 @@
 <section class="section puntos-de-venta">
-	<div class="puntos-de-venta__box">    
+  <div class="puntos-de-venta__punto-venta">
+    <a class="puntos-de-venta__link" href="https://www.google.es/maps/place/Basmodec,+S.L./@43.323419,-1.973341,17z/data=!4m2!3m1!1s0xd51a543600ce0fd:0x87db3a18e065fe01?hl=es" target="_blank">
+      <div class="puntos-de-venta__content puntos-de-venta__content--gros">
+        {% include svg/location.svg %}
+      </div>
+    </a>
+    <h2 class="puntos-de-venta__title">Gros</h2>
+    <div class="puntos-de-venta__info">
+      De Lunes a Viernes: 07:45-13:30 / 15:00-19:30 <br>
+      Sábados: 08:00-13:30 <br>
+      943 28 26 11
+    </div>
+  </div>
+  <div class="puntos-de-venta__punto-venta">
+    <a class="puntos-de-venta__link" href="https://www.google.es/maps/place/Basmodec+S+L/@43.267588,-1.962925,17z/data=!4m7!1m4!3m3!1s0xd51ae4ec2890ddf:0xb7ec392296de06a2!2sBasmodec+S+L!3b1!3m1!1s0xd51ae4ec2890ddf:0xb7ec392296de06a2?hl=es" target="_blank">
+      <div class="puntos-de-venta__content puntos-de-venta__content--hernani">
+        {% include svg/location.svg %}
+      </div>
+    </a>
+    <h2 class="puntos-de-venta__title">Hernani</h2>
+    <div class="puntos-de-venta__info">
+      De Lunes a Sábado: 08:00-19:00 <br>
+      943 52 16 50
+    </div>
+  </div>
+  <div class="puntos-de-venta__punto-venta">
+    <a class="puntos-de-venta__link" href="https://www.google.es/maps/place/Basmodec,+S.L./@43.305139,-1.9803637,17z/data=!3m1!4b1!4m2!3m1!1s0xd51aff08103c7bb:0xbd2a3eba974a2e33?hl=es" target="_blank">
+      <div class="puntos-de-venta__content puntos-de-venta__content--amara">
+        {% include svg/location.svg %}
+      </div>
+    </a>
+    <h2 class="puntos-de-venta__title">Amara</h2>
+    <div class="puntos-de-venta__info">
+      De Lunes a Viernes: 09:00-13:00 / 15:30-19:30 <br>
+      Sábados: 09:30-13:30  <br>
+      943 45 67 04
+    </div>
+  </div>
+  <div class="puntos-de-venta__punto-venta">
+    <a class="puntos-de-venta__link" href="https://www.google.es/maps/place/Basmodec/@43.0470472,-2.2014664,17z/data=!4m7!1m4!3m3!1s0xd5036e88069a687:0x8db9baee8ef9efb3!2sBasmodec!3b1!3m1!1s0xd5036e88069a687:0x8db9baee8ef9efb3?hl=es" target="_blank">
+      <div class="puntos-de-venta__content puntos-de-venta__content--beasain">
+        {% include svg/location.svg %}
+      </div>
+    </a>
+    <h2 class="puntos-de-venta__title">Beasain</h2>
+    <div class="puntos-de-venta__info">
+      De Lunes a Viernes: 09:00-13:30 / 15:00-19:30 <br>
+      Sábados: 10:00-13:00 <br>
+      943 88 08 63
+    </div>
+  </div>
+
+	<!--<div class="puntos-de-venta__box">
     <a class="puntos-de-venta__link" target="_blank" href="https://www.google.es/maps/place/Basmodec,+S.L./@43.323419,-1.973341,17z/data=!4m2!3m1!1s0xd51a543600ce0fd:0x87db3a18e065fe01?hl=es">
+      <div class="puntos-de-venta__info">        
+      </div>
       <img class="puntos-de-venta__img" alt="gros" src="assets/images/puntos-de-venta/gros.jpg"/>
     </a>
     <h1 class="puntos-de-venta__title">Gros</h1>
@@ -22,5 +76,5 @@
       <img class="puntos-de-venta__img" alt="gros" src="assets/images/puntos-de-venta/gros.jpg"/>
     </a>
     <h1 class="puntos-de-venta__title">Beasain</h1>
-  </div>
+  </div>-->
 </section>
