design/nuestras-marcas

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -28,6 +28,8 @@
 @import "components/list-post";
 @import "components/puntos-de-venta";
 @import "components/about";
+@import "components/nuestras-marcas";
+
 
 // view
 
