--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -29,6 +29,7 @@
 @import "components/puntos-de-venta";
 @import "components/about";
 @import "components/nuestras-marcas";
+@import "components/noticias";
 
 
 // view
